--- a/jasmine-standalone-3/src/thermostat.html
+++ b/jasmine-standalone-3/src/thermostat.html
@@ -11,7 +11,7 @@
 <div>
   Powersave
 <label class="switch">
-  <input type="checkbox"></input>
+  <input type="checkbox" checked></input>
   <span class="slider round" ></span>
 </label>
 </div>
