Styling for temperature and buttons

--- a/jasmine-standalone-3/src/thermostat.html
+++ b/jasmine-standalone-3/src/thermostat.html
@@ -5,8 +5,14 @@
 <script src="thermostat-controller.js"></script>
 </head>
 
-<button class="increase">Increase temperature </button>
-<button class="decrease">Decrease temperature</button>
+<div id="temp">
+<p id="temp-display"></p>
+</div>
+
+<div id="button-style">
+  <button class="increase">+</button>
+  <button class="decrease">-</button>
+</div>
 
 <div>
   Powersave
@@ -17,7 +23,3 @@
 </div>
 
 <button>Reset temperature</button>
-
-<p id="temp-display">
-</p>
-
