--- a/jasmine-standalone-3/src/thermostat.html
+++ b/jasmine-standalone-3/src/thermostat.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="Thermostat.js"></script>
+<script src="gauge.min.js"></script>
 <script src="thermostat-controller.js"></script>
 </head>
 
@@ -13,6 +14,10 @@
   <button class="increase">+</button>
   <button class="decrease">-</button>
 </div>
+
+<canvas id="gauge" width="300" height="200">
+  This text is displayed if your browser does not support HTML5 Canvas.
+</canvas>
 
 <div>
   Powersave
