Further design implementation for Thermostat front end

--- a/jasmine-standalone-3/src/thermostat.html
+++ b/jasmine-standalone-3/src/thermostat.html
@@ -23,11 +23,11 @@
   </div>
 
   <div>
-    <button id="reset">Reset temperature</button>
+    <button id="reset">Reset Temperature</button>
   </div>
 
   <div>
-    Powersave
+  <p class="reset-font">Power Save</p>
   <label class="switch">
     <input type="checkbox" checked></input>
     <span class="slider round" ></span>
