--- a/thermostat_webserver/public/thermostat.html
+++ b/thermostat_webserver/public/thermostat.html
@@ -1,5 +1,5 @@
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="Thermostat.js"></script>
 <script src="gauge.min.js"></script>
@@ -32,6 +32,11 @@
     <input type="checkbox" checked></input>
     <span class="slider round" ></span>
   </label>
+  </div>
+
+  <p id="weather"></p>
+  <div>
+    <img id="weather-icon" src="" alt="Weather icon">
   </div>
 
 </body>
